[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
edition = "2018"
homepage = "https://github.com/twilight-rs/cache"
license = "ISC"
name = "twilight-cache"
readme = "../README.md"
repository = "https://github.com/twilight-rs/cache.git"
version = "0.1.0"

[dependencies]
futures-util = "0.3"
serde = { default-features = false, features = ["derive"], optional = true, version = "1" }
twilight-model = { default-features = false, version = "0.2" }

[dev-dependencies]
tokio = { default-features = false, features = ["macros", "rt-threaded"], version = "0.2" }
twilight-cache-inmemory = { default-features = false, optional = false, path = "../in-memory" }

[features]
default = ["serde"]
